8. List of states

--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -6,9 +6,9 @@
     <BODY>
         <H1>States</H1>
         <UL>
-		{% for state in sorted_states %}
-            <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
-		{% endfor %}
+        {% for item in total|sort(attribute="name") %}
+            <LI>{{ item.id|e }}: <B>{{ item.name|e }}</B></LI>
+        {% endfor %}
         </UL>
     </BODY>
 </HTML>
