--- a/web_flask/templates/10-hbnb_filters.html
+++ b/web_flask/templates/10-hbnb_filters.html
@@ -3,7 +3,7 @@
   <head>
     <META charset="utf-8">
     <title>AirBnB clone</title>
-    <link rel="stylesheet" href="../static/styles/reset.css">
+    <link rel="stylesheet" href="../static/styles/default.css">
     <link rel="stylesheet" href="../static/styles/4-common.css">
     <link rel="stylesheet" href="../static/styles/3-header.css">
     <link rel="stylesheet" href="../static/styles/3-footer.css">
@@ -47,7 +47,7 @@
     </div>
 
     <footer>
-      Holberton School
+      Best School
     </footer>
   </body>
 </html>
